tests/build/fail/widget_new/missing_semi_in_when1.stderr
error: expected `,` or `;`
  --> $DIR/missing_semi_in_when1.rs:10:22
   |
10 |             margin = 0
   |                      ^
